--- a/resources/views/auth/signup.edge
+++ b/resources/views/auth/signup.edge
@@ -1,46 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sign Up</title>
-</head>
-<body>
-  <div class="container col-md-6 m-5">
-{{--  <div class="container alert alert-success text-center">Hi Welcome back Yahya!</div>'
- <h4 class="text-center mb-2">Techlewa Departments</h4>  --}}
-<form action="/signup" method="post">
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label>Name</label>
-      <input type="text" class="form-control" name="name">
-       @if(flashMessages.has('errors.name'))
-        <small class="alert  alert-danger">{{ flashMessages.get('errors.name') }}</small>
-      @endif
+@layout('layouts/app')
+@section('content')
+<div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-md w-full space-y-8">
+    <div>
+      <img class="mx-auto h-12 w-auto" src="favicon.png" alt="Workflow">
+      <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+      Instagram
+      </h2>
+      <p class="mt-2 text-center text-sm text-gray-600">
+        <a class="font-medium text-indigo-600 hover:text-indigo-500">
+        Sign up to see photos and videos from your friends.
+        </a>
+      </p>
     </div>
-    <div class="form-group col-md-6">
-      <label>Email</label>
-      <input type="email" class="form-control" name="email">
-       @if(flashMessages.has('errors.email'))
-        <small class="alert  alert-danger">{{ flashMessages.get('errors.email') }}</small>
-      @endif
-    </div>
-    <div class="form-group col-md-6">
-      <label>Password</label>
-      <input type=password" class="form-control" name="password">
-       @if(flashMessages.has('errors.password'))
-        <small class="alert alert-danger">{{ flashMessages.get('errors.password') }}</small>
-      @endif
-    </div>
-    <div class="form-group col-md-6">
-      <label>Confirm Password</label>
-      <input type=password_confirmation" class="form-control" name="password_confirmation">
-    </div>
+    <form class="mt-8 space-y-6" action="/login" method="POST">
+      <div class="rounded-md shadow-sm -space-y-px">
+        <div>
+          <label for="name" class="sr-only">Name</label>
+          <input id="email-address" name="name" type="name" autocomplete="name" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Your name">
+            @if(flashMessages.has('errors.name'))
+             <small class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded">{{ flashMessages.get('errors.name') }}</small>
+            @endif
+        </div>
+        <div>
+          <label for="email-address" class="sr-only">Email address</label>
+          <input id="email-address" name="email" type="email" autocomplete="email" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Email address">
+            @if(flashMessages.has('errors.email'))
+             <small class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded">{{ flashMessages.get('errors.email') }}</small>
+            @endif
+        </div>
+        <div>
+          <label for="password" class="sr-only">Password</label>
+          <input  name="password" type="password" autocomplete="current-password" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password">
+            @if(flashMessages.has('errors.password'))
+              <small class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded">{{ flashMessages.get('errors.password') }}</small>
+             @endif
+        </div>
+        <div>
+          <label for="password" class="sr-only">Confirm Password</label>
+          <input  name="password_confirmation" type="password" autocomplete="current-password" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password">
+            @if(flashMessages.has('errors.password'))
+              <small class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded">{{ flashMessages.get('errors.password') }}</small>
+             @endif
+        </div>
+      </div>
+      <div>
+        <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          <span class="absolute left-0 inset-y-0 flex items-center pl-3">
+            <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd" />
+            </svg>
+          </span>
+          Sign up
+        </button>
+      </div>
+    </form>
+          <div class="flex items-center justify-between">
+        <div class="flex items-center">
+          <label for="remember_me" class="ml-2 block text-sm text-gray-900">
+            Already have an Account ?
+          </label>
+        </div>
+
+        <div class="text-sm">
+          <a href="/login" class="font-medium text-indigo-600 hover:text-indigo-500">
+           login 
+          </a>
+        </div>
+      </div>
   </div>
-  <button type="submit" class="btn btn-primary">Sign Up</button>
-</form>
 </div>
-</body>
-</html>
+@endsection
+
+
