--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>instagram</title>
-</head>
-<body>
-  <h1>Welcome home</h1>
-</body>
-</html>
+@layout('layouts/app')
+
+@section('content')
+    @if(auth.isAuthenticated)
+   <h1>Welocme {{auth.user.name}}</h1>
+   <form action="/logout" method="POST">
+    <button type="submit">logout</button>
+  </form>
+  @else
+    <a href="/login">login</a>
+  @endif
+@endsection
