--- a/resources/views/auth/signup.edge
+++ b/resources/views/auth/signup.edge
@@ -5,7 +5,7 @@
     <div>
       <img class="mx-auto h-12 w-auto" src="favicon.png" alt="Workflow">
       <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-      Instagram
+      Adonisgram
       </h2>
       <p class="mt-2 text-center text-sm text-gray-600">
         <a class="font-medium text-indigo-600 hover:text-indigo-500">
@@ -13,7 +13,7 @@
         </a>
       </p>
     </div>
-    <form class="mt-8 space-y-6" action="/login" method="POST">
+    <form class="mt-8 space-y-6" action="/signup" method="POST">
       <div class="rounded-md shadow-sm -space-y-px">
         <div>
           <label for="name" class="sr-only">Name</label>
