updates on mail verification

--- a/resources/views/layouts/app.edge
+++ b/resources/views/layouts/app.edge
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{title}}</title>
 </head>
+</style>
 <body>
     @section('content')
     @endsection
