--- a/resources/views/profile.edge
+++ b/resources/views/profile.edge
@@ -1,8 +1,16 @@
 @layout('layouts/app')
 @section('content')
-   <h1>Welcome {{ auth.user.name }} ! </h1>
+ @if(flashMessages.has('success'))
+  <div class="bg-indigo-900 text-center py-4 lg:px-4">
+  <div class="p-2 bg-indigo-800 items-center text-indigo-100 leading-none lg:rounded-full flex lg:inline-flex" role="alert">
+    <span class="font-semibold mr-2 text-left flex-auto">
+     {{ flashMessages.get('success') }}
+</span>
+  </div>
+</div>
+ @endif
    <form action="/verify" method="post">
-      <input type="submit" value="Resend">
+      <input class="btn btn-blue" type="submit" value="Resend">
    </form>
 @endsection
    
