--- a/resources/views/welcome.edge
+++ b/resources/views/welcome.edge
@@ -1,12 +1,20 @@
 @layout('layouts/app')
-
 @section('content')
+ @if(flashMessages.has('success'))
+  <div class="bg-indigo-900 text-center py-4 lg:px-4">
+  <div class="p-2 bg-indigo-800 items-center text-indigo-100 leading-none lg:rounded-full flex lg:inline-flex" role="alert">
+    <span class="font-semibold mr-2 text-left flex-auto">
+     {{ flashMessages.get('success') }}
+</span>
+  </div>
+</div>
+ @endif
     @if(auth.isAuthenticated)
    <h1>Welocme {{auth.user.name}}</h1>
    <form action="/logout" method="POST">
-    <button type="submit">logout</button>
+    <button class="class="btn btn-blue"" type="submit">logout</button>
   </form>
   @else
-    <a href="/login">login</a>
+    <button class="btn btn-blue"><a href="/login">login</a></button>
   @endif
 @endsection
